Fix broken CSRF in contact form

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -11,6 +11,7 @@
     = favicon_link_tag 'favicon.ico'
     / Set the viewport width to device width for mobile
     %meta{:content => "width=device-width", :name => "viewport"}/
+    = csrf_meta_tag
     %title Cincinnati Ruby Brigade
     / Google Fonts
     %link{:href => "http://fonts.googleapis.com/css?family=Cabin:400,400italic,600italic,700italic", :rel => "stylesheet", :type => "text/css"}
